deploy: 214ac90be1f48661389d9c046c0ee7b6b2aadfab

--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2 id="about-this-page"><a class="header" href="#about-this-page">About this page</a></h2>
+                        <h1 id="welcome"><a class="header" href="#welcome">Welcome</a></h1>
 <p>This is my own personal page. Feel free to see the pages.</p>
 <h2 id="about-me"><a class="header" href="#about-me">About me</a></h2>
 <p>I am a student at Charles University studying computer science. My CV can be found here:</p>
@@ -162,15 +162,19 @@
 <li><a href="./resources/CV_cs.pdf">Životopis</a></li>
 <li><a href="./resources/CV_en.pdf">Resumé</a></li>
 </ul>
-<p>Also I am great fan of <a href="/adventofcode.html">Advent of Code</a> and I have all my (partial) solutions listed here.</p>
+<h2 id="project"><a class="header" href="#project">Project</a></h2>
+<p>There is a small list of my projects.</p>
+<h3 id="-rodoc"><a class="header" href="#-rodoc">🌳 <a href="https://github.com/rodoc-app">rodoc</a></a></h3>
+<p>My own bachelors project that is for organizing your own family tree.</p>
+<p><a href="https://github.com/rodoc-app/rodoc-app">GitHub</a> and <a href="https://rodoc-app.github.io/">Page</a> for more information.</p>
+<h3 id="graphs"><a class="header" href="#graphs">graphs</a></h3>
+<p>Library for graphs that is written in <code>Java</code>. There are some basic algorithms implemented as well.</p>
+<p><a href="https://github.com/metury/graphs">GitHub</a> and <a href="../resources/docs/graphs/index.html">Documentation</a></p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
-                                <i class="fa fa-angle-left"></i>
-                            </a>
 
                             <a rel="next prefetch" href="mff.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
@@ -182,9 +186,6 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
-                        <i class="fa fa-angle-left"></i>
-                    </a>
 
                     <a rel="next prefetch" href="mff.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
