--- a/print.html
+++ b/print.html
@@ -155,34 +155,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="welcome-to-my-personal-page"><a class="header" href="#welcome-to-my-personal-page">Welcome, to my personal page.</a></h1>
-<pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
-</span>    let mut interests : Vec&lt;&amp;str&gt; = vec!["Computer science",
-                                         "Travel",
-                                         "Music",
-                                         "Movies"];
-
-    println!("Welcome to my personal webpage.");
-    println!("");
-    println!("Here you may find some things I enjoy or do.");
-
-    for int in &amp;interests {
-        println!("\t- {}", int);
-    }
-
-    interests.push("Advent of code");
-
-    println!("And also I cannot forget: {}", interests[interests.len() - 1]);
-
-    let url = "github.com/metury/metury.github.io";
-    let tools = vec!["Github pages", "MdBook"];
-
-    println!("");
-    println!("Source of this page can be found at the link: {}", url);
-    println!("");
-    println!("For the proper usecase I used {}.", tools.join(" and "));
-<span class="boring">}</span></code></pre></pre>
-<div style="break-before: page; page-break-before: always;"></div><h2 id="about-this-page"><a class="header" href="#about-this-page">About this page</a></h2>
+                        <h1 id="welcome"><a class="header" href="#welcome">Welcome</a></h1>
 <p>This is my own personal page. Feel free to see the pages.</p>
 <h2 id="about-me"><a class="header" href="#about-me">About me</a></h2>
 <p>I am a student at Charles University studying computer science. My CV can be found here:</p>
@@ -190,7 +163,14 @@
 <li><a href="./resources/CV_cs.pdf">Životopis</a></li>
 <li><a href="./resources/CV_en.pdf">Resumé</a></li>
 </ul>
-<p>Also I am great fan of <a href="/adventofcode.html">Advent of Code</a> and I have all my (partial) solutions listed here.</p>
+<h2 id="project"><a class="header" href="#project">Project</a></h2>
+<p>There is a small list of my projects.</p>
+<h3 id="-rodoc"><a class="header" href="#-rodoc">🌳 <a href="https://github.com/rodoc-app">rodoc</a></a></h3>
+<p>My own bachelors project that is for organizing your own family tree.</p>
+<p><a href="https://github.com/rodoc-app/rodoc-app">GitHub</a> and <a href="https://rodoc-app.github.io/">Page</a> for more information.</p>
+<h3 id="graphs"><a class="header" href="#graphs">graphs</a></h3>
+<p>Library for graphs that is written in <code>Java</code>. There are some basic algorithms implemented as well.</p>
+<p><a href="https://github.com/metury/graphs">GitHub</a> and <a href="../resources/docs/graphs/index.html">Documentation</a></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="matfyz"><a class="header" href="#matfyz">Matfyz</a></h1>
 <p>Tady je menší rozcestník pro matfyzácké věci. Jak už moje zápisky nebo odkazy na předměty, které mám zapsané.</p>
 <h2 id="zápisky"><a class="header" href="#zápisky">Zápisky</a></h2>
@@ -258,14 +238,6 @@
 <li><a href="https://kam.mff.cuni.cz/~kolman/papers/stc-ext-arx.pdf">Petr Kolman - other aproximation</a></li>
 <li><a href="https://sites.cs.ucsb.edu/~daniello/papers/maximum_minimal_cut__Journal.pdf">Maximum connected cut</a></li>
 </ul>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="project"><a class="header" href="#project">Project</a></h1>
-<p>There is a small list of my projects.</p>
-<h2 id="rodoc"><a class="header" href="#rodoc"><a href="https://github.com/rodoc-app">rodoc</a></a></h2>
-<p>My own bachelors project that is for organizing your own family tree.</p>
-<p><a href="https://github.com/rodoc-app/rodoc-app">GitHub</a> and <a href="https://rodoc-app.github.io/">Page</a> for more information.</p>
-<h2 id="graphs"><a class="header" href="#graphs">graphs</a></h2>
-<p>Library for graphs that is written in <code>Java</code>. There are some basic algorithms implemented as well.</p>
-<p><a href="https://github.com/metury/graphs">GitHub</a> and <a href="../resources/docs/graphs/index.html">Documentation</a></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="advent-of-code"><a class="header" href="#advent-of-code">Advent of code</a></h1>
 <p>Each year I am trying to solve the <a href="https://adventofcode.com/">advent of code</a> puzzles. The solutions I created are on a <a href="https://codeberg.org/tury/advent-of-code">Codeberg repository</a>.</p>
 <h2 id="other-links-1"><a class="header" href="#other-links-1">Other links</a></h2>
