deploy: f786aec872d916287bbc5ef2cfaa9eb94ae4c426

--- a/langs.html
+++ b/langs.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Tenerife - Personal page</title>
+        <title>Programming languages - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -159,20 +159,43 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="jednoduchý-průvodce-po-tenerife"><a class="header" href="#jednoduchý-průvodce-po-tenerife">Jednoduchý průvodce po Tenerife</a></h1>
-<p>Zde můžete najít pár tipů a rad ohledně návštěvy Španělského ostrova Tenerife. Mimo samotné cesty můžete zde najít pár zajímavých míst a taky několik konkrétních tras.</p>
-<p>Vše berte trochu s ohledem. Ne všechny trasy jsou vhodné pro každého a také se v průběhu času mohou měnit konkrétní mistní podmínky a situace. Tento průvodce je občas aktualizován, ale je to pouze moje volnočasová aktivita.</p>
-<p>Všechny typy a rady jsou na Vaše vlastní nebezpečí a tímto nijak neodpovídám, že případné potíže.</p>
+                        <h1 id="programming-languages"><a class="header" href="#programming-languages">Programming languages</a></h1>
+<p>Every time when someone is creating a new software project there is the question one will ask sooner or later. That is which programming language am I going to use. So I decided to at least put some links for some languages I have tried for later purposes.</p>
+<h2 id="object-oriented-languages"><a class="header" href="#object-oriented-languages">Object oriented languages</a></h2>
+<p>These are the commonly used languages which have objects as their main object.</p>
+<h3 id="c"><a class="header" href="#c">C++</a></h3>
+<ul>
+<li><a href="https://cppreference.com/">Cpp reference</a></li>
+</ul>
+<h3 id="rust"><a class="header" href="#rust">Rust</a></h3>
+<ul>
+<li><a href="https://crates.io/">Crates - libraries</a></li>
+</ul>
+<h3 id="go"><a class="header" href="#go">Go</a></h3>
+<ul>
+<li><a href="https://pkg.go.dev/">Libraries</a></li>
+</ul>
+<h2 id="functional-languages"><a class="header" href="#functional-languages">Functional languages</a></h2>
+<p>Functional programming is not that popular, but trust me it is really fun.</p>
+<h3 id="elixir"><a class="header" href="#elixir">Elixir</a></h3>
+<ul>
+<li><a href="https://hexdocs.pm/elixir/">Libraries</a></li>
+</ul>
+<h3 id="scala"><a class="header" href="#scala">Scala</a></h3>
+<h2 id="scripting-languages"><a class="header" href="#scripting-languages">Scripting languages</a></h2>
+<p>For some small programs it is better to use just scripts.</p>
+<h3 id="python"><a class="header" href="#python">Python</a></h3>
+<h3 id="ruby"><a class="header" href="#ruby">Ruby</a></h3>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="boot.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="mff.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="tenerife/travel.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="boot.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -182,11 +205,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="boot.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="mff.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="tenerife/travel.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="boot.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
