deploy: b4ee0645e58e8ec7def604410a90c320c124b850

--- a/print.html
+++ b/print.html
@@ -251,25 +251,43 @@
 <ul>
 <li><a href="https://cppreference.com/">Cpp reference</a></li>
 </ul>
-<h3 id="rust"><a class="header" href="#rust">Rust</a></h3>
+<h3 id="rust"><a class="header" href="#rust"><a href="https://www.rust-lang.org/">Rust</a></a></h3>
 <ul>
 <li><a href="https://crates.io/">Crates - libraries</a></li>
+<li><a href="https://play.rust-lang.org/">Playground</a></li>
 </ul>
-<h3 id="go"><a class="header" href="#go">Go</a></h3>
+<h3 id="go"><a class="header" href="#go"><a href="https://go.dev/">Go</a></a></h3>
 <ul>
 <li><a href="https://pkg.go.dev/">Libraries</a></li>
 </ul>
+<h3 id="zig"><a class="header" href="#zig"><a href="https://ziglang.org/">Zig</a></a></h3>
 <h2 id="functional-languages"><a class="header" href="#functional-languages">Functional languages</a></h2>
 <p>Functional programming is not that popular, but trust me it is really fun.</p>
-<h3 id="elixir"><a class="header" href="#elixir">Elixir</a></h3>
+<h3 id="elixir"><a class="header" href="#elixir"><a href="https://elixir-lang.org/">Elixir</a></a></h3>
 <ul>
 <li><a href="https://hexdocs.pm/elixir/">Libraries</a></li>
+<li><a href="https://elixirforum.com/">Forum</a></li>
+<li>A book <a href="https://joyofelixir.com/toc.html">Joy of elixir</a> for beginner programmers.</li>
 </ul>
-<h3 id="scala"><a class="header" href="#scala">Scala</a></h3>
+<h3 id="scala"><a class="header" href="#scala"><a href="https://www.scala-lang.org/">Scala</a></a></h3>
+<ul>
+<li><a href="https://users.scala-lang.org/">Forum</a></li>
+</ul>
 <h2 id="scripting-languages"><a class="header" href="#scripting-languages">Scripting languages</a></h2>
 <p>For some small programs it is better to use just scripts.</p>
-<h3 id="python"><a class="header" href="#python">Python</a></h3>
-<h3 id="ruby"><a class="header" href="#ruby">Ruby</a></h3>
+<h3 id="perl"><a class="header" href="#perl"><a href="https://www.perl.org/">Perl</a></a></h3>
+<ul>
+<li><a href="https://perldoc.perl.org/">Documentations</a></li>
+</ul>
+<h3 id="python"><a class="header" href="#python"><a href="https://www.python.org/">Python</a></a></h3>
+<h3 id="ruby"><a class="header" href="#ruby"><a href="https://www.ruby-lang.org/">Ruby</a></a></h3>
+<h1 id="other-technologies"><a class="header" href="#other-technologies">Other technologies</a></h1>
+<h2 id="mongodb"><a class="header" href="#mongodb"><a href="https://www.mongodb.com/">MongoDB</a></a></h2>
+<ul>
+<li>A mongo database is a vector database.</li>
+<li><a href="https://www.mongodb.com/community/forums/">Forum</a></li>
+</ul>
+<h2 id="qt"><a class="header" href="#qt"><a href="https://www.qt.io/">Qt</a></a></h2>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="fresh-instalation-of-debian-computer"><a class="header" href="#fresh-instalation-of-debian-computer">Fresh instalation of <a href="https://www.debian.org">Debian</a> computer.</a></h1>
 <h1 id="my-bashrc"><a class="header" href="#my-bashrc">My <code>.bashrc</code></a></h1>
 <pre><code class="language-bash">export EDITOR='nvim'
