deploy: 27dcb7ce0dada766aa1f603679fa59eb699ced81

--- a/langs.html
+++ b/langs.html
@@ -202,6 +202,7 @@
 <ul>
 <li>A mongo database is a vector database.</li>
 <li><a href="https://www.mongodb.com/community/forums/">Forum</a></li>
+<li><a href="https://learn.mongodb.com/">Learning courses</a></li>
 </ul>
 <h2 id="qt"><a class="header" href="#qt"><a href="https://www.qt.io/">Qt</a></a></h2>
 
