--- a/print.html
+++ b/print.html
@@ -286,6 +286,7 @@
 <ul>
 <li>A mongo database is a vector database.</li>
 <li><a href="https://www.mongodb.com/community/forums/">Forum</a></li>
+<li><a href="https://learn.mongodb.com/">Learning courses</a></li>
 </ul>
 <h2 id="qt"><a class="header" href="#qt"><a href="https://www.qt.io/">Qt</a></a></h2>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="fresh-instalation-of-debian-computer"><a class="header" href="#fresh-instalation-of-debian-computer">Fresh instalation of <a href="https://www.debian.org">Debian</a> computer.</a></h1>
