--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         .app-gradient {
             /* Royal */
             background: #141E30; /* fallback for old browsers */
-            background: -webkit-linear-gradient(to left bottom, #243B55, #141E30); /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to left bottom, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background: -webkit-linear-gradient(to left bottom, #1f4037, #99f2c8); /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to left bottom, #1f4037, #99f2c8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         }
         .logo-gradient {
             /* Crimson Tide */
-            background-image: linear-gradient(to bottom right, #642B73, #C6426E);
+            background-image: linear-gradient(to left, #000000, #434343);
             padding-top: .5rem;
             padding-bottom: 1rem;
         }
