--- a/matfyz.html
+++ b/matfyz.html
@@ -121,6 +121,22 @@
 </thead>
 <tbody>
 <tr>
+<td align="center"><strong>2425 - Letní semestr</strong></td>
+<td align="center"><strong>--</strong></td>
+</tr>
+<tr>
+<td align="center">Algoritmy pro specifické třídy grafů</td>
+<td align="center"></td>
+</tr>
+<tr>
+<td align="center">Pokročilé programování v jazyce Rust</td>
+<td align="center"></td>
+</tr>
+<tr>
+<td align="center">Integer Programming and Computational Social Choice</td>
+<td align="center"></td>
+</tr>
+<tr>
 <td align="center"><strong>2425 - Zimní semestr</strong></td>
 <td align="center"><strong>--</strong></td>
 </tr>
@@ -146,7 +162,7 @@
 </tr>
 <tr>
 <td align="center">Úvod do teorie čísel</td>
-<td align="center"><a href="https://kam.mff.cuni.cz/~klazar/UTC24.html">Web</a></td>
+<td align="center"><a href="https://kam.mff.cuni.cz/~klazar/UTC24.html">Web</a> : <a href="https://kam.mff.cuni.cz/~klazar/ln_utc.pdf">Skripta</a></td>
 </tr>
 <tr>
 <td align="center"><strong>2324 - Letní semestr</strong></td>
@@ -237,6 +253,7 @@
 <h2>Thesis links</h2>
 <ul>
 <li><a href="./mff/connected-cuts.pdf">My notes on connected cuts</a></li>
+<li><a href="./mff/results.pdf">Linear program aproximation result</a></li>
 </ul>
 <h3>Other links</h3>
 <ul>
