--- a/collections.html
+++ b/collections.html
@@ -134,6 +134,11 @@
 <td>Jan-Erik Fjell</td>
 <td>978-80-7585-191-8</td>
 </tr>
+<tr>
+<td>Lovci štěstěny</td>
+<td>Jan-Erik Fjell</td>
+<td>978-80-277-0466-8</td>
+</tr>
 </tbody>
 </table>
 <h2>Movies</h2>
@@ -560,6 +565,10 @@
 <tr>
 <td>Shark Side of the Moon</td>
 <td></td>
+</tr>
+<tr>
+<td>Atomic Shark</td>
+<td><a href="https://www.imdb.com/title/tt5930094/">IMDB</a></td>
 </tr>
 </tbody>
 </table>
