--- a/matfyz.html
+++ b/matfyz.html
@@ -126,15 +126,19 @@
 </tr>
 <tr>
 <td align="center">Algoritmy pro specifické třídy grafů</td>
-<td align="center"></td>
+<td align="center"><a href="https://kam.mff.cuni.cz/~fiala/index.shtml.cs">Web</a> : <a href="https://kam.mff.cuni.cz/~fiala/ASTG/tw.pdf">Poznámky</a> : <a href="https://ix.cs.uoregon.edu/~luks/iso.pdf">Luksův algoritmus</a></td>
 </tr>
 <tr>
 <td align="center">Pokročilé programování v jazyce Rust</td>
-<td align="center"></td>
+<td align="center"><a href="https://d3s.mff.cuni.cz/teaching/nprg074/">Web</a> : <a href="https://matfyz.lho.sh/">Web</a></td>
 </tr>
 <tr>
 <td align="center">Integer Programming and Computational Social Choice</td>
-<td align="center"></td>
+<td align="center"><a href="https://research.koutecky.name/db/teaching:ipcomsoc2425">Web</a> : <a href="https://research.koutecky.name/db/_media/teaching:ipcomsoc2425:stfa-notes.pdf">LN</a></td>
+</tr>
+<tr>
+<td align="center"><del>AI v kontextu</del></td>
+<td align="center"><a href="https://aivk.cz/aivk_vyuka.html">Web</a></td>
 </tr>
 <tr>
 <td align="center"><strong>2425 - Zimní semestr</strong></td>
@@ -253,7 +257,7 @@
 <h2>Thesis links</h2>
 <ul>
 <li><a href="./mff/connected-cuts.pdf">My notes on connected cuts</a></li>
-<li><a href="./mff/results.pdf">Linear program aproximation result</a></li>
+<li><a href="./mff/results.pdf">Linear program aproximation result</a> and <a href="./mff/results.html">generated page</a></li>
 </ul>
 <h3>Other links</h3>
 <ul>
